decafexpr/output/dev/llvm/intcall1.llvm.bc.err
/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as: /Users/Sei/SFU/CMPT379/DecafCompiler/decafexpr/output/dev/llvm/intcall1.llvm:8:22: error: use of undefined value '%a'
  store i32 %0, i32* %a
                     ^
